[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healpix-analyse"
dynamic = ["version"]
description = "Tools to analyse HEALPix EO data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

authors = [
  { name = "Jean-Marc Delouis" },
  { name = "Tina Odaka" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "torch",
  "healpix-geo",
]

[tool.setuptools.packages.find]
include = [
    "healpix_analyse",
    "healpix_analyse.*",
]

[tool.setuptools_scm]