[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healpix-analyse"
dynamic = ["version"]
description = "Tools to analyse HEALPix EO data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

authors = [
  { name = "Jean-Marc Delouis" },
  { name = "Tina Odaka" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "torch",
  "healpix-geo",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.15",
  "myst-nb>=1.0",
  "sphinx-autoapi>=3.0",
  "sphinx-design>=0.5",
]
dev = [
  "healpix-analyse[docs]",
  "pytest",
  "healpy",
  "scipy",
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/EOPF-DGGS/healpix-analyse"
Documentation = "https://eopf-dggs.github.io/healpix-analyse/"
Repository = "https://github.com/EOPF-DGGS/healpix-analyse"
Issues = "https://github.com/EOPF-DGGS/healpix-analyse/issues"

[tool.setuptools.packages.find]
include = [
    "healpix_analyse",
    "healpix_analyse.*",
]

[tool.setuptools_scm]